# cpp-sym-2023-2025

./: README.md
1_sem/: Установка Qt Creator.txt
1_sem/01_c_basics/src/: 1_1_hello_world.c  1_2_printf_scanf.c  1_3_data_types.c  1_4_math.c
1_sem/02_if/: 2_1_if_switch.c  2_2_process_stdio_errors.c  2_3_arithmetics_additional.c
1_sem/03_loops/: 3_1_for_while.c  3_2_menu.c
1_sem/04_nested_loops_arrays/: 4_1_nested_loops.c  4_2_arrays.c  4_3_two_dim_arrays.c
1_sem/05_function/: 5_1_function.c  5_2_function_parameters.cpp  5_3_function_parameters_refs.cpp  5_4_recursion.cpp
1_sem/06_struct_malloc/: 6_1_struct.cpp  6_2_malloc_free.cpp  6_3_list_ptr.cpp  6_4_list_ref.cpp
1_sem/07_typedef/: 7_1_typedef.c
1_sem/08_cpp_basics/: 7_2_cin_cout.cpp  7_3_string.cpp
1_sem/09_stl_simple/1_dynamic_array/: 1_dynamic_array.cbp  1_dynamic_array.depend  1_dynamic_array.layout  main.cpp  my_vector.cpp  my_vector.h
1_sem/09_stl_simple/2_vector/: 2_vector.cbp  2_vector.depend  main.cpp
1_sem/09_stl_simple/3_string/: 3_string.cbp  3_string.depend  3_string.layout  main.cpp
1_sem/09_stl_simple/4_list/: 4_list.cbp  4_list.depend  main.cpp  my_list.h
1_sem/11_ege_text_files/: 24_27693.cpp  game.cpp
1_sem/12_exceptions_set_map/: 4.txt  tasks.docx
1_sem/13_class/: 7_1.cpp  7_2.cpp
1_sem/14_15_inheritance/: 9_1.cpp  9_2.cpp
1_sem/16_class_hierarhy_practice/1_geometric/: CMakeLists.txt  circle.cpp  circle.h  main.cpp  parallelogram.cpp  parallelogram.h  pryamougolnic.cpp  pryamougolnic.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h
2_sem/24_arduino/5_avr_c/: main.c  (+1 more)
(+147 files in other folders)
